# policynet

./: CLAUDE.md  FIX_SUMMARY.md  QUICK_START.md  README.md  STATUS.md  __init__.py  carla-0.10.0-cp311-cp311-win_amd64.whl  carla_env.py  debug_carla_vision.py  debug_exact_error.py  debug_mdn_logprob.py  debug_mdn_shapes.py  debug_vision_model.py  demo_minimal.py  install_deps.py  mdn.py  openpilot_wrapper.py  policy_model.py  pyproject.toml  run_training.py  test_carla_env.py  test_carla_training.py  test_fix_validation.py  test_mdn_fix.py  test_onnx_vision.py  test_openpilot_imports.py  test_openpilot_path.py  test_parser_import.py  test_pipeline.py  test_simple.py  test_tinygrad_imports.py  test_training_ready.py  train.py  validate_code.py  verify_dimensions.py
