[project]
name = "policynet"
version = "0.1.0"
description = "Openpilot-compatible policy network training"
requires-python = ">=3.11,<3.13"

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "gymnasium",
    "onnx>=1.14.0",
    "opencv-python",
    "matplotlib",
    "tqdm",
    "pickle5; python_version<'3.8'",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
]

carla = [
    # CARLA requires Python 3.8-3.10, install manually if needed
    # "carla>=0.9.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 120
